--- a/server.conf
+++ b/server.conf
@@ -1,8 +1,13 @@
 PORT=8080
-DOCUMENT_ROOT=/var/www/html
-NUM_WORKERS=4
-THREADS_PER_WORKER=10
-MAX_QUEUE_SIZE=100
-LOG_FILE=access.log
-CACHE_SIZE_MB=10
-TIMEOUT_SECONDS=30
+MAX_QUEUE_SIZE=2
+NUM_WORKERS=1
+THREADS_PER_WORKER=1
+
+# PORT=8080
+# DOCUMENT_ROOT=/var/www/html
+# NUM_WORKERS=4
+# THREADS_PER_WORKER=10
+# MAX_QUEUE_SIZE=100
+# LOG_FILE=access.log
+# CACHE_SIZE_MB=10
+# TIMEOUT_SECONDS=30
