--- a/server.conf
+++ b/server.conf
@@ -2,9 +2,9 @@ PORT=8080
 MAX_QUEUE_SIZE=2
 NUM_WORKERS=1
 THREADS_PER_WORKER=1
+DOCUMENT_ROOT=www
 
 # PORT=8080
-# DOCUMENT_ROOT=/var/www/html
 # NUM_WORKERS=4
 # THREADS_PER_WORKER=10
 # MAX_QUEUE_SIZE=100
