--- a/server.conf
+++ b/server.conf
@@ -3,10 +3,12 @@ MAX_QUEUE_SIZE=2
 NUM_WORKERS=1
 THREADS_PER_WORKER=1
 DOCUMENT_ROOT=www
+LOG_FILE=access.log
 
 # PORT=8080
 # NUM_WORKERS=4
 # THREADS_PER_WORKER=10
+# DOCUMENT_ROOT=www
 # MAX_QUEUE_SIZE=100
 # LOG_FILE=access.log
 # CACHE_SIZE_MB=10
