all features DONE!!

--- a/server.conf
+++ b/server.conf
@@ -1,15 +1,8 @@
 PORT=8080
-MAX_QUEUE_SIZE=2
-NUM_WORKERS=1
-THREADS_PER_WORKER=1
+NUM_WORKERS=1           # 4
+THREADS_PER_WORKER=1    # 10
 DOCUMENT_ROOT=www
+MAX_QUEUE_SIZE=2        # 100
 LOG_FILE=access.log
-
-# PORT=8080
-# NUM_WORKERS=4
-# THREADS_PER_WORKER=10
-# DOCUMENT_ROOT=www
-# MAX_QUEUE_SIZE=100
-# LOG_FILE=access.log
-# CACHE_SIZE_MB=10
-# TIMEOUT_SECONDS=30
+CACHE_SIZE_MB=10
+TIMEOUT_SECONDS=30
